[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pypi]
name = "daba"
version = "0.0.1"
description = "A database handler."
authors = [{name = "Vishnu Prakash", email = "vishnu@klivolks.com"}]
url = "https://github.com/klivolks/Database"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3) or later",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11"
]
